// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authentication flux Should authenticate user with valid credentials 1`] = `
Object {
  "data": Object {
    "userLogin": Object {
      "id": "970ecbc6-4c40-4877-aec3-c046d6eb0fa1",
      "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6Ijk3MGVjYmM2LTRjNDAtNDg3Ny1hZWMzLWMwNDZkNmViMGZhMSIsImlhdCI6MTYyMzcyNjU4MiwiZXhwIjoxNjIzODEyOTgyfQ.Y5lQPhh4CcNFEncGLcZ5UG6US9eol2gw3fpiwfI9Wak",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Authentication flux Should confirm user account 1`] = `
Object {
  "data": Object {
    "userConfirmAccount": Object {
      "email": "teste@email.com",
      "id": "2ffda1f8-9f2d-4e52-89b6-547509a5490e",
      "isVerified": true,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Authentication flux Should generate reset token 1`] = `
Object {
  "data": Object {
    "userForgotPassword": Object {
      "id": "eac51f41-719b-4e1a-bea1-68613a82e952",
      "passwordResetToken": "1cf614560833306adcdb1bad756f266050e2dffe",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Authentication flux Should register user and generate emailConfirmationToken 1`] = `
Object {
  "data": Object {
    "userRegister": Object {
      "email": "kowesor320@vvaa1.com",
      "emailConfirmationToken": "046374e569843b2890185481a3bbbea5c073cd5c",
      "firstName": "mytest",
      "id": "556b1d81-f4da-430a-a6de-fc707d538973",
      "lastName": "lastnametest",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Authentication flux Should reset user password 1`] = `
Object {
  "data": Object {
    "userResetPassword": Object {
      "email": "teste@email.com",
      "id": "68a88254-d34d-4c46-87de-fe8c1b002c5d",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
